--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -188,7 +188,7 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 
 
 \subsection{Number of Images}
-As shown in \fref{fig:SNRNimages}, the SNR scales with  the square root of the independent images. This will be used to estimate the number of shots necessary to achieve a SNR greater than three to be able to experimentally verify IDI as an imaging method.
+As shown in \fref{fig:SNRNimages} if only considering shot and phase noise (uncorrelated between different  images), the SNR scales with the square root of the number of images.  This can be used to estimate the number of shots necessary to achieve a SNR greater than three to be able to experimentally verify IDI as an imaging method. Systematic noise sources causing correlated noise does not follow this relation and should be minimized, e.g. by masking out affected areas of the detector.
  
 \subsection{Number of Modes}
 To Illustrate the effect of the number of modes on the signal and the SNR, a simulation is performed by averaging the intensity over $M$ realizations of the random phases.  
