--- a/Tex/discussion.tex
+++ b/Tex/discussion.tex
@@ -6,13 +6,16 @@ much longer pulse length () than the coherence time, leading to lower than optim
 
 Due to limitations in the placement of the detectors, the undersampling
 
+The amplitude of the intensity correlations observed in the foil samples is a factor of 2-4 less than previously measured by Inoue et al and suggests more than 200 modes. This might be the combination of a longer pulse length due to a less strict filtering of the shots (a different trade-off chosen with regards to peak contrast vs. noise reduction by averaging over more images) and the only partially by the regression corrected undersampling creating additional spatial modes.
 
 The severe detector artifacts reduced the amount of usable data significantly, which, unfortunately, has not been noticed during the experiment. This show the necessity of better continuous online monitoring of the recorded data.
 
 
-The nanoparticle samples had a much less pronounced features according to the SAXS measurements than initially planned. An optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation might lead to stronger features. Also, using liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length and therefore difficult to achieve spatial overlap of the beam and sample, this would introduce additional complexity to the experimental setup.
 
 
+The estimated number of independent modes seems lower than expected, but one has to keep in mind that the used regression scheme as a low sensitivity for higher $M$ values due to the diminishing gradient and might underestimate the number of modes. Nevertheless, this is an indicator that the number of modes is much higher than the "optimal" value for unpolarized light ($M=2$), resulting in severely reduced signal and therefore SNR.
+
+The nanoparticle samples had a much less pronounced features according to the SAXS measurements than initially planned and compared to the structure factor for non-interacting spheres. An optimization of the preparation method leading to either higher concentrations of non-aggregating particles or to complete aggregation and the  formation of quasi-crystals, might lead to stronger features. Also, using liquid injectors might be an option, even though, partially due to the tight focus, short Rayleigh length and therefore difficult to achieve spatial overlap of the beam and sample, this would introduce additional complexity to the experimental setup.
 
 
 
