--- a/Tex/ffz.bib
+++ b/Tex/ffz.bib
@@ -813,7 +813,6 @@ The Compton scattering cross section in equation (110) is incorrect. It follows 
   title     = {Fourier Transformation for Pedestrians},
   year      = {2015},
   isbn      = {9783319169859},
-  series    = {Undergraduate Lecture Notes in Physics},
 }
 
 @Article{goodman1976,
@@ -1570,7 +1569,7 @@ new challenges arising in the field --without limiting itself to specific techno
 with relatively short life spans.},
 }
 
-@Article{yanoda2015,
+@Article{yoneda2015,
   author        = {Yoneda, Hitoki and Inubushi, Yuichi and Nagamine, Kazunori and Michine, Yurina and Ohashi, Haruhiko and Yumoto, Hirokatsu and Yamauchi, Kazuto and Mimura, Hidekazu and Kitamura, Hikaru and Katayama, Tetsuo and Ishikawa, Tetsuya and Yabashi, Makina},
   journal       = {Nature},
   title         = {Atomic inner-shell laser at 1.5-{\aa}ngstr{\"o}m wavelength pumped by an X-ray free-electron laser},
