--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -31,7 +31,7 @@
 \usepackage{blindtext} %Einfügen von Blindtext über \blindtext
 \usepackage{siunitx} %Einstellungen für Dezimaltrennzeichen und Definitionen in siunitx.cfg
 \usepackage[autostyle=true,german=quotes]{csquotes} %Verwendung von Anführungszeichen über \enquote{Text}
-\usepackage[toc,page]{appendix} %um eine Titelseite "Anhang" vor dem eigentlichen Anhang einfügen zu können
+\usepackage[toc]{appendix} %um eine Titelseite "Anhang" vor dem eigentlichen Anhang einfügen zu können
 
 %Druckt den Hinweis "Entwurf" mit Datum auf jede Seite. Zum deaktivieren printwatermark=false setzen
 \usepackage[printwatermark=true]{xwatermark}
@@ -360,7 +360,7 @@
 \bibliography{ffz}
 \bibliographystyle{ffz}
 \addcontentsline{toc}{chapter}{Bibliography}
-\cleardoublepage
+%\cleardoublepage
 
 
 \include{thanks}
